-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: hs23
-
Component/s: hotspot
-
b10
-
generic
-
generic
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2219985 | 8 | Tony Printezis | P4 | Resolved | Fixed | b22 |
| JDK-2219885 | 7u4 | Tony Printezis | P4 | Closed | Fixed | b07 |
7118202 (G1: eden size unnecessarily drops to the minimum) has a description of a race that causes the RSet length of the inc CSet to become inconsistent (and in some cases very large). As part of that CR we put defensive code to detect and deal with this issue. This CR will fix the race "properly".
The race happens when a concurrent refinement thread updates the inc CSet data concurrently with a mutator thread that retires a mutator alloc region. To avoid taking more locks we should use atomic operations to update the inc CSet RSet lengths. In fact, the inc CSet elapsed time is also prone to get corrupted due to the same race so we should also atomically update that field too.
The race happens when a concurrent refinement thread updates the inc CSet data concurrently with a mutator thread that retires a mutator alloc region. To avoid taking more locks we should use atomic operations to update the inc CSet RSet lengths. In fact, the inc CSet elapsed time is also prone to get corrupted due to the same race so we should also atomically update that field too.
- backported by
-
JDK-2219985 G1: use atomics to update RS length / predict time of inc CSet
-
- Resolved
-
-
JDK-2219885 G1: use atomics to update RS length / predict time of inc CSet
-
- Closed
-
- relates to
-
JDK-7118202 G1: eden size unnecessarily drops to the minimum
-
- Closed
-