7119027: G1: use atomics to update RS length / predict time of inc CSet

Make sure that the updates to the RS length and inc CSet predicted time are updated in an MT-safe way.

Reviewed-by: brutisso, iveresov